--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -12,7 +12,7 @@
         <![endif]-->
     <!-- Latest compiled and minified Bootstrap 4 Alpha 3 CSS -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,700' rel='stylesheet' type='text/css'>
-    <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 
     <!-- Your stuff: Third-party CSS libraries go here -->
 
